--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"chart.js": "^4.4.2",
+		"date-fns": "^3.6.0",
+		"lucide-svelte": "^0.378.0",
 		"svelte-persisted-store": "^0.9.2",
 		"svelte-sonner": "^0.3.22"
 	}
